fix scrollbar on blog elements for firefox

--- a/src/css/blog/blog.scss
+++ b/src/css/blog/blog.scss
@@ -43,6 +43,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  scrollbar-width: none;
   transition: 2s 1s;
   
   &:hover {
